Debug/Userstoryconsole.ClangTidy.log
Error while processing C:\Users\chris\source\repos\Userstoryconsole\Sprint.cpp.
Error while processing C:\Users\chris\source\repos\Userstoryconsole\UserStory.cpp.
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\xmemory:723:9: warning: destructor called on 'Collaborator' that is abstract but has non-virtual destructor [clang-diagnostic-delete-abstract-non-virtual-dtor]
        _Ptr->~_Uty();
        ^
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\xmemory:950:39: note: in instantiation of function template specialization 'std::_Default_allocator_traits<std::allocator<Collaborator>>::destroy<Collaborator>' requested here
            allocator_traits<_Alloc>::destroy(_Al, _Unfancy(_First));
                                      ^
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\vector:1680:9: note: in instantiation of function template specialization 'std::_Destroy_range<std::allocator<Collaborator>>' requested here
        _Destroy_range(_First, _Last, _Getal());
        ^
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\vector:1764:13: note: in instantiation of member function 'std::vector<Collaborator>::_Destroy' requested here
            _Destroy(_Myfirst, _Mylast);
            ^
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\vector:712:9: note: in instantiation of member function 'std::vector<Collaborator>::_Tidy' requested here
        _Tidy();
        ^
C:\Users\chris\source\repos\Userstoryconsole\Iteration.cpp:15:12: note: in instantiation of member function 'std::vector<Collaborator>::~vector' requested here
Iteration::Iteration(std::string iterationName, std::string iterationType,
           ^
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\xmemory:723:16: note: qualify call to silence this warning
        _Ptr->~_Uty();
               ^
C:\Users\chris\source\repos\Userstoryconsole/Iteration.h:7:2: error: unterminated conditional directive [clang-diagnostic-error]
#ifndef ITERATION_H
 ^
C:\Users\chris\source\repos\Userstoryconsole/Iteration.h:51:2: error: expected ';' after class [clang-diagnostic-error]
};
 ^
 ;
C:\Users\chris\source\repos\Userstoryconsole\Backlog.cpp:71:3: warning: use range-based for loop instead [modernize-loop-convert]
  for (size_t line = 0; line < row.size(); line++) {
  ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      (auto & line : row)
C:\Users\chris\source\repos\Userstoryconsole\Backlog.cpp:117:21: warning: narrowing conversion from 'int' to signed type 'char' is implementation-defined [bugprone-narrowing-conversions,cppcoreguidelines-narrowing-conversions]
      if (line.find(storyID) != std::string::npos) {
                    ^
C:\Users\chris\source\repos\Userstoryconsole\Backlog.cpp:162:21: warning: narrowing conversion from 'std::vector<std::basic_string<char>>::size_type' (aka 'unsigned int') to signed type 'int' is implementation-defined [bugprone-narrowing-conversions,cppcoreguidelines-narrowing-conversions]
  int backlogSize = backlog.row.size();
                    ^
C:\Users\chris\source\repos\Userstoryconsole\Collaborator.cpp:10:19: warning: variable 'collaboratorID' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
int Collaborator::collaboratorID = 0;
                  ^
C:\Users\chris\source\repos\Userstoryconsole\Collaborator.cpp:14:15: warning: an exception may be thrown in function 'Collaborator' which should not throw exceptions [bugprone-exception-escape]
Collaborator::Collaborator() noexcept{
              ^
C:\Users\chris\source\repos\Userstoryconsole\Iteration.cpp:104:3: warning: use range-based for loop instead [modernize-loop-convert]
  for (size_t index = 0; index < productBacklog.size(); index++) {
  ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      (auto & index : productBacklog)
C:\Users\chris\source\repos\Userstoryconsole\KanbanBoard.cpp:16:14: warning: use '= default' to define a trivial default constructor [modernize-use-equals-default]
KanbanBoard::KanbanBoard() noexcept {}
             ^                      ~~
                                    = default;
C:\Users\chris\source\repos\Userstoryconsole\KanbanBoard.cpp:108:22: warning: static member accessed through instance [readability-static-accessed-through-instance]
      std::to_string(userStory.storyID), userStory.getStatus()));
                     ^~~~~~~~~~
                     UserStory::
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:21:15: warning: use a trailing return type for this function [modernize-use-trailing-return-type]
std::ostream& operator<<(std::ostream& out, UserStory& userstory);
~~~~~~~~~~~~~ ^
Suppressed 249130 warnings (249130 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).
auto                                                              -> std::ostream&
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:31:5: warning: an exception may be thrown in function 'main' which should not throw exceptions [bugprone-exception-escape]
int main() {
    ^
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:31:5: warning: use a trailing return type for this function [modernize-use-trailing-return-type]
int main() {
~~~ ^
auto       -> int
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:71:24: warning: narrowing conversion from 'unsigned int' to signed type 'int' is implementation-defined [bugprone-narrowing-conversions,cppcoreguidelines-narrowing-conversions]
  UserStory::storyID = masterBacklog.getRow().size() - 1;
                       ^
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:133:19: warning: variable 'collaborator' is not initialized [cppcoreguidelines-init-variables]
    Collaborator* collaborator;
                  ^
                               = nullptr
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:134:16: warning: variable 'iteration' is not initialized [cppcoreguidelines-init-variables]
    Iteration* iteration;
               ^
                         = nullptr
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:221:11: warning: assigning newly created 'gsl::owner<>' to non-owner 'Iteration *' [cppcoreguidelines-owning-memory]
          iteration = new Iteration(inputString, "Iteration", 0);
          ^
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:232:12: warning: 5 is a magic number; consider replacing it with a named constant [cppcoreguidelines-avoid-magic-numbers,readability-magic-numbers]
      case 5:
           ^
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:241:12: warning: 6 is a magic number; consider replacing it with a named constant [cppcoreguidelines-avoid-magic-numbers,readability-magic-numbers]
      case 6:
           ^
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:250:12: warning: 7 is a magic number; consider replacing it with a named constant [cppcoreguidelines-avoid-magic-numbers,readability-magic-numbers]
      case 7:
           ^
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:295:15: warning: use a trailing return type for this function [modernize-use-trailing-return-type]
std::ostream& operator<<(std::ostream& out, UserStory& userstory) {
~~~~~~~~~~~~~ ^
auto                                                              -> std::ostream&
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:354:25: warning: static member accessed through instance [readability-static-accessed-through-instance]
    savedUserStories << userstory.storyID << ", " << userstory.getStoryName()
                        ^~~~~~~~~~
                        UserStory::
C:\Users\chris\source\repos\Userstoryconsole\Source.cpp:364:35: warning: static member accessed through instance [readability-static-accessed-through-instance]
  backlog.addToRow(std::to_string(userstory.storyID) + ", " +
                                  ^~~~~~~~~~
                                  UserStory::
C:\Users\chris\source\repos\Userstoryconsole\UserStory.cpp:25:16: warning: variable 'storyID' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
int UserStory::storyID = 0;
               ^
C:\Users\chris\source\repos\Userstoryconsole\UserStory.cpp:30:12: warning: an exception may be thrown in function 'UserStory' which should not throw exceptions [bugprone-exception-escape]
UserStory::UserStory() noexcept {
           ^
C:\Users\chris\source\repos\Userstoryconsole\UserStory.cpp:75:24: warning: use a trailing return type for this function [modernize-use-trailing-return-type]
std::string UserStory::getStoryBody() { return storyBody; }
~~~~~~~~~~~            ^
auto                                  -> std::string
C:\Users\chris\source\repos\Userstoryconsole\UserStory.cpp:82:16: warning: use a trailing return type for this function [modernize-use-trailing-return-type]
int UserStory::getStoryPoints() const { return storyPoints; }
~~~            ^
auto                                  -> int
C:\Users\chris\source\repos\Userstoryconsole\UserStory.cpp:89:16: warning: use a trailing return type for this function [modernize-use-trailing-return-type]
int UserStory::getStatus() { return status; }
~~~            ^
auto                       -> int
C:\Users\chris\source\repos\Userstoryconsole\UserStory.cpp:97:24: warning: use a trailing return type for this function [modernize-use-trailing-return-type]
std::string UserStory::getStatusString() {
~~~~~~~~~~~            ^
auto                                     -> std::string
